[package]
name = "macready"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
description = "Core library for building metric collection agents"
license = "ISC"
readme = "README.md"
repository = "https://github.com/dspearson/macready"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "sync"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
rand = "0.9.0"
thiserror = "2.0.12"
hostname = "0.3.1"
deadpool-postgres = "0.14.1"

[[example]]
name = "network_metrics"
path = "examples/network_metrics.rs"
